--- a/package.json
+++ b/package.json
@@ -1,44 +1,25 @@
 {
-  "name": "pwa-starter",
-  "version": "0.0.1",
-  "description": "A starter kit for building PWAs!",
+  "name": "react-pwa-starter",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "dev-server": "vite --open",
-    "dev": "npm run dev-server",
-    "dev-task": "vite",
-    "deploy": "npx @azure/static-web-apps-cli login --no-use-keychain && npx @azure/static-web-apps-cli deploy",
-    "build": "tsc && vite build",
-    "start": "npm run dev",
-    "start-remote": "vite --host"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@shoelace-style/shoelace": "^2.18.0",
-    "@tailwindcss/vite": "^4.1.18",
-    "@thepassle/app-tools": "^0.9.12",
-    "lit": "^3.2.1",
-    "tailwindcss": "^4.1.18",
-    "urlpattern-polyfill": "^10.0.0",
-    "workbox-build": "^7.3.0",
-    "workbox-core": "^7.3.0",
-    "workbox-precaching": "^7.3.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
-    "vite": "^5.4.11",
-    "vite-plugin-pwa": "^0.20.5"
-  },
-  "prettier": {
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": true,
-    "quoteProps": "consistent",
-    "trailingComma": "es5",
-    "endOfLine": "crlf",
-    "bracketSpacing": true
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@tailwindcss/vite": "^4.0.0",
+    "vite": "^5.4.1",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
